welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: not found: value tfalse
while(fini=tfalse){if (estSurMessage){
           ^BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
while(fini=tfalse){if (estSurMessage){
          ^BDRBuggle:6: error: not found: value avancer
	avancer();
        ^BDRBuggle:10: error: not found: value avancer
			avancer();
                        ^